--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+django = "^3.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
